<resources>
    <string name="app_name">Android学习笔记</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="mvp_text">MVP例子</string>
    <string name="no_more_products">load complete</string>
    <string name="loading">Loading</string>
    <string name="title_activity_refresh">RefreshActivity</string>
    <string name="bazier">贝塞尔曲线</string>
    <string name="kotlin">Kotlin</string>
    <string name="title_activity_login">Kotlin写的简单登录</string>

    <array name="main_items">
        <item>List - Basic Drag and Swipe</item>
        <item>Grid - Basic Drag</item>
    </array>

    <array name="dummy_items">
        <item>One</item>
        <item>Two</item>
        <item>Three</item>
        <item>Four</item>
        <item>Five</item>
        <item>Six</item>
        <item>Seven</item>
        <item>Eight</item>
        <item>Nine</item>
        <item>Ten</item>
        <item>One1</item>
        <item>Two1</item>
        <item>Three1</item>
        <item>Four1</item>
        <item>Five1</item>
        <item>Six1</item>
        <item>Seven1</item>
        <item>Eight1</item>
        <item>Nine1</item>
        <item>Ten1</item>
        <item>One</item>
        <item>Two</item>
        <item>Three</item>
        <item>Four</item>
        <item>Five</item>
        <item>Six</item>
        <item>Seven</item>
        <item>Eight</item>
        <item>Nine</item>
        <item>Ten</item>
        <item>One1</item>
        <item>Two1</item>
        <item>Three1</item>
        <item>Four1</item>
        <item>Five1</item>
        <item>Six1</item>
        <item>Seven1</item>
        <item>Eight1</item>
        <item>Nine1</item>
        <item>Ten1</item>
        <item>One</item>
        <item>Two</item>
        <item>Three</item>
        <item>Four</item>
        <item>Five</item>
        <item>Six</item>
        <item>Seven</item>
        <item>Eight</item>
        <item>Nine</item>
        <item>Ten</item>
    </array>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="rate_app">Rate App</string>
    <string name="shipping_method">Shipping Method</string>
    <string name="payment_method">Payment Method</string>
    <string name="change_profile">Change Profile</string>
    <string name="about_us">About Us</string>
    <string name="contact_us">Contact Us</string>
    <string name="terms_of_service">Terms of services</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="return_policy">Return Policy</string>
    <string name="logout_text">Logout</string>
    <string name="language_settings">Language Setting</string>
    <string name="currency_settings">Currency Setting</string>


</resources>
