<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/material_white"
    android:fitsSystemWindows="true"
    tools:context="com.sailvan.dresslink.account.settings.SettingsActivity">

    <include layout="@layout/common_toolbar"/>

    <LinearLayout
        android:id="@+id/ll_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/appbar"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="4dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_rate_app"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:background="@drawable/selector_search_keyword_bg"
            android:drawableRight="@mipmap/arrow_right"
            android:gravity="center_vertical"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/rate_app"
            android:textColor="@color/left_menu_text_color"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@color/material_grey_600"/>

        <com.oubowu.exerciseprogram.tailview.TailTextView
            android:id="@+id/ttv_language"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:background="@drawable/selector_search_keyword_bg"
            android:drawableRight="@mipmap/arrow_right"
            android:gravity="center_vertical"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/language_settings"
            android:textColor="@color/left_menu_text_color"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@color/material_grey_600"/>

        <com.oubowu.exerciseprogram.tailview.TailTextView
            android:id="@+id/ttv_currency"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:background="@drawable/selector_search_keyword_bg"
            android:drawableRight="@mipmap/arrow_right"
            android:gravity="center_vertical"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/currency_settings"
            android:textColor="@color/left_menu_text_color"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@color/material_grey_600"/>

        <TextView
            android:id="@+id/tv_shipping"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:background="@drawable/selector_search_keyword_bg"
            android:drawableRight="@mipmap/arrow_right"
            android:gravity="center_vertical"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/shipping_method"
            android:textColor="@color/left_menu_text_color"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@color/material_grey_600"/>

        <TextView
            android:id="@+id/tv_payment"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:background="@drawable/selector_search_keyword_bg"
            android:drawableRight="@mipmap/arrow_right"
            android:gravity="center_vertical"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/payment_method"
            android:textColor="@color/left_menu_text_color"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@color/material_grey_600"/>

        <TextView
            android:id="@+id/tv_change_profile"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:background="@drawable/selector_search_keyword_bg"
            android:drawableRight="@mipmap/arrow_right"
            android:gravity="center_vertical"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/change_profile"
            android:textColor="@color/left_menu_text_color"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@color/material_grey_600"/>

        <TextView
            android:id="@+id/tv_about_us"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:background="@drawable/selector_search_keyword_bg"
            android:drawableRight="@mipmap/arrow_right"
            android:gravity="center_vertical"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/about_us"
            android:textColor="@color/left_menu_text_color"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@color/material_grey_600"/>

        <TextView
            android:id="@+id/tv_contact_us"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:background="@drawable/selector_search_keyword_bg"
            android:drawableRight="@mipmap/arrow_right"
            android:gravity="center_vertical"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/contact_us"
            android:textColor="@color/left_menu_text_color"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@color/material_grey_600"/>

        <TextView
            android:id="@+id/tv_services"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:background="@drawable/selector_search_keyword_bg"
            android:drawableRight="@mipmap/arrow_right"
            android:gravity="center_vertical"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/terms_of_service"
            android:textColor="@color/left_menu_text_color"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@color/material_grey_600"/>

        <TextView
            android:id="@+id/tv_privacy"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:background="@drawable/selector_search_keyword_bg"
            android:drawableRight="@mipmap/arrow_right"
            android:gravity="center_vertical"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/privacy_policy"
            android:textColor="@color/left_menu_text_color"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@color/material_grey_600"/>

        <TextView
            android:id="@+id/tv_return"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:background="@drawable/selector_search_keyword_bg"
            android:drawableRight="@mipmap/arrow_right"
            android:gravity="center_vertical"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/return_policy"
            android:textColor="@color/left_menu_text_color"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@color/material_grey_600"/>

        <TextView
            android:id="@+id/tv_logout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:background="@drawable/selector_search_keyword_bg"
            android:drawableRight="@mipmap/arrow_right"
            android:gravity="center_vertical"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/logout_text"
            android:textColor="@color/left_menu_text_color"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@color/material_grey_600"/>

    </LinearLayout>

</RelativeLayout>
